# Pi-Appliance

./: .gitignore  README.md  appliance_config.json  pyproject.toml
appliance/: README.md  __init__.py  __main__.py  appliance.py
appliance_features/: README.md
appliance_features/auto-reboot/: auto-reboot.cron  enable_feature.sh
appliance_features/auto_reboot/: auto_reboot.cron  enable_feature.sh
appliance_features/console_autologin/: enable_feature.sh
appliance_features/console_autostart/: enable_feature.sh
appliance_features/cups/: enable_feature.sh
appliance_features/vnc_server/: enable_feature.sh
appliance_features/webui/: 020_lighttpd  enable_feature.sh
appliance_features/webui/docroot/: app.css  app.js  eh-confirm-modal.js  eh-loading-modal.js  index.html
appliance_features/webui/scripts/: index.py  logs.py  poweroff.py  reboot.py  start.py  stop.py
appliance_features/webui/templates/: index.html  logs.html
builder/: README.md  __init__.py  __main__.py  app_features.py  deploy.py  edit_params.py  repo_ops.py  system_packages.py
filesystem/: README.md
filesystem/boot/: config.txt  initial-setup.sh  ssh
filesystem/home/pi/: .bash_login  .vimrc
filesystem/home/pi/.config/lxsession/LXDE-pi/: autostart
installer/: README.md  __init__.py  __main__.py
templates/: repository
templates/aws/: credentials
templates/git/: git-credentials  gitconfig
