[tool.poetry]
name = "pi-appliance"
version = "0.1.0"
description = ""
authors = ["Todd Esposito <todd@toddesposito.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
blessed = "^1.18.0"
pylama = "^7.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
